--- a/pages/subpages/mine/merchant/subpages/hotel-order/components/order-item/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/hotel-order/components/order-item/index.wxml
@@ -6,44 +6,20 @@
       <view>联系客户</view>
       <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
     </view>
-    <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
+    <view class="order-status">{{ORDER.statusDesc(item.status, true)}}</view>
   </view>
   <view class="order-content">
-    <room-item info="{{item.roomInfo}}" />
+    <room-item info="{{item.roomInfo || null}}" />
   </view>
   <view class="order-footer">
     <view class="total-info row baseline">
       <view>{{ORDER.paymentDesc(item.status)}}：</view>
       <price-unit price="{{item.paymentAmount || 0}}" color="#333" fontSize="26rpx" integerFontSize="36rpx" />
     </view>
-    <view class="deliver-info-wrap" wx:if="{{item.status === 201}}">
-      <view class="deliver-info row" catchtap="copyOrderSn">
-        <image class="order-icon" src="./images/order.png" />
-        <view class="order-sn">订单编号 {{item.orderSn}}</view>
-        <image class="copy-icon" src="./images/copy.png" />
-      </view>
-      <view class="deliver-info row top" catchtap="copyAddress">
-        <image class="address-icon" src="./images/address.png" />
-        <view class="address-detail">{{item.consignee}}，{{item.mobile}}，{{item.address}}</view>
-        <image class="copy-icon" src="./images/copy.png" />
-      </view>
-    </view>
     <view class="btn-wrap">
-      <button
-        class="btn" 
-        wx:if="{{item.status === 101}}" 
-        catchtap="cancelOrder"
-      >
-        取消订单
-      </button>
-      <button class="btn" catchtap="navToDetail">查看详情</button>
-      <button 
-        class="btn active" 
-        wx:if="{{item.status === 201}}"
-        catchtap="checkedOrder"
-      >
-        确认订单
-      </button>
+      <button class="btn" wx:if="{{item.status === 201}}" catchtap="refundOrder" hover-class="none">取消订单</button>
+      <button class="btn active" wx:if="{{item.status === 201}}" catchtap="approveOrder" hover-class="none">确认订单</button>
+      <button class="btn" catchtap="navToDetail" hover-class="none">查看详情</button>
     </view>
   </view>
 </view>
