--- a/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxss
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxss
@@ -27,24 +27,24 @@
   backdrop-filter: blur(4px);
   z-index: -1;
 }
-.spot-image {
+.restaurant-image {
   margin-left: 8px;
   width: 30px;
   height: 30px;
   border-radius: 4px;
 }
-.spot-info {
+.restaurant-info {
   margin-left: 8px;
   color: #fff;
   font-weight: bold;
 }
-.spot-name {
+.bar-restaurant-name {
   font-size: 14px;
 }
 .grade-wrap {
   font-size: 8px;
 }
-.spot-grade {
+.restaurant-grade {
   margin-left: 4rpx;
 }
 
