--- a/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxml
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxml
@@ -10,12 +10,12 @@
     <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{scenicInfo.imageList[0]}}" mode="aspectFill" />
     <view class="bg-cover" wx:if="{{navBarVisible}}" />
     <back-icon style="margin-left: 8px;" noBorder="{{navBarVisible}}" />
-    <image class="spot-image" wx:if="{{navBarVisible}}" src="{{scenicInfo.imageList[0]}}" mode="aspectFill" />
-    <view class="spot-info" wx:if="{{navBarVisible}}">
-      <view class="spot-name">{{scenicInfo.name}}</view>
+    <image class="scenic-image" wx:if="{{navBarVisible}}" src="{{scenicInfo.imageList[0]}}" mode="aspectFill" />
+    <view class="scenic-info" wx:if="{{navBarVisible}}">
+      <view class="bar-scenic-name">{{scenicInfo.name}}</view>
       <view class="grade-wrap row">
         <van-rate value="{{scenicInfo.score || 0}}" size="8" gutter="0" color="#fa2458" void-icon="star" void-color="#fedbe4" allow-half readonly />
-        <text class="spot-grade">{{scenicInfo.score || '暂无评分'}}</text>
+        <text class="scenic-grade">{{scenicInfo.score || '暂无评分'}}</text>
       </view>
     </view>
   </view>
