--- a/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
@@ -3,7 +3,7 @@
 
 <page-meta page-style="{{ telPopupVisible ? 'overflow: hidden;' : '' }}" />
 
-<template is="skeleton" wx:if="{{pageLoaded}}" />
+<template is="skeleton" wx:if="{{!pageLoaded}}" />
 
 <view class="nav-bar-wrap">
   <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
@@ -43,7 +43,7 @@
 </view>
 
 <view class="banner-wrap">
-  <swiper style="height: 580rpx;" wx:if="{{!pageLoaded}}" current="{{ curDot - 1 }}" circular bindchange="bannerChange">
+  <swiper style="height: 580rpx;" wx:if="{{pageLoaded}}" current="{{ curDot - 1 }}" circular bindchange="bannerChange">
     <swiper-item 
       wx:if="{{restaurantInfo.video}}"
       bindtap="previewMedia" 
@@ -87,7 +87,7 @@
   </view>
 </view>
 
-<view class="container" wx:if="{{!pageLoaded}}">
+<view class="container" wx:if="{{pageLoaded}}">
   <view class="row between">
     <view class="row">
       <view class="restaurant-name omit single">{{restaurantInfo.name}}</view>
