--- a/pages/subpages/mall/catering/subpages/restaurant-detail/components/ticket-item/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/components/ticket-item/index.wxml
@@ -3,11 +3,16 @@
   bindtap="checkDetail"
 >
   <view class="ticket-info">
-    <view class="ticket-name">{{ ticket.price + '代' + ticket.originalPrice + '元代金券' }}</view>
+    <view class="ticket-name">{{ ticket.originalPrice + '元代金券' }}</view>
     <view class="tips">{{ tips }}</view>
     <view class="price-wrap row">
       <price-unit price="{{ticket.price || 0}}" color="#F66B38" unitColor="#F66B38" />
       <view class="discount">{{discount}}折</view>
+      <view class="commission-tag" wx:if="{{userInfo.promoterInfo && commission}}" catchtap="toggleCommissionVisible">
+        <text wx:if="{{commissionVisible}}">奖励¥{{commission}}</text>
+        <text wx:if="{{!commissionVisible}}" style="padding-top: 8rpx; font-size: 28rpx;">******</text>
+        <image class="commission-visible-icon" src="/images/{{commissionVisible ? '' : 'in'}}visible.png" />
+      </view>
     </view>
   </view>
   <view class="buy-btn-wrap">
