--- a/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxml
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/index.wxml
@@ -120,7 +120,10 @@
     </view>
   </view>
 
-  <view class="content-title-wrap row between">
+  <view 
+    class="content-title-wrap row between" 
+    wx:if="{{ticketList.length || (!ticketList.length && !combinedTicketTypeList.length)}}"
+  >
     <view class="content-title">景点门票</view>
     <view class="content-title-tips row" wx:if="{{scenicInfo.policyList.length}}" bindtap="checkPolicy">
       <text>优待政策</text>
