--- a/pages/subpages/mine/order/components/set-meal-order-item/index.wxss
+++ b/pages/subpages/mine/order/components/set-meal-order-item/index.wxss
@@ -8,11 +8,19 @@
 .list-header {
   font-size: 28rpx;
 }
-.restaurant-name {
+
+.shop-logo {
+  margin-right: 16rpx;
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 50%;
+}
+.shop-name {
   flex: 1;
   color: #333;
   font-weight: 500;
 }
+
 .order-status {
   color: var(--blue-1);
 }
