--- a/pages/subpages/mine/order/components/meal-ticket-order-item/index.wxss
+++ b/pages/subpages/mine/order/components/meal-ticket-order-item/index.wxss
@@ -8,12 +8,41 @@
 .list-header {
   font-size: 28rpx;
 }
-.restaurant-name {
+
+.shop-logo {
+  margin-right: 16rpx;
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 50%;
+}
+.shop-name {
   flex: 1;
   color: #333;
   font-weight: 500;
 }
+
 .order-status {
+  color: var(--blue-1);
+}
+
+.countdown-wrap {
+  margin-left: 18rpx;
+  padding-left: 16rpx;
+  padding-right: 8rpx;
+  height: 50rpx;
+  color: #666;
+  font-size: 22rpx;
+  background: #f5f6f8;
+  border-radius: 25rpx;
+}
+.alarm-icon {
+  margin-right: 6rpx;
+  width: 28rpx;
+  height: 28rpx;
+}
+.countdown {
+  margin-left: 6rpx;
+  width: 93rpx;
   color: var(--blue-1);
 }
 
