--- a/pages/subpages/mine/order/components/set-meal-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/set-meal-order-item/index.wxml
@@ -1,3 +1,4 @@
+<wxs module="TIME" src="/utils/filters/time.wxs" />
 <wxs module="ORDER" src="../../../utils/setMealOrder.wxs" />
 
 <view class="order-item" catchtap="navToDetail">
