--- a/pages/subpages/mine/order/subpages/hotel-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/hotel-order/order-detail/index.wxml
@@ -4,7 +4,7 @@
 <view class="container">
   <view class="card">
     <view class="card-header row between">
-      <view class="shop-info row" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
+      <view class="shop-info row" catchtap="navToShop">
         <image class="shop-logo" wx:if="{{orderInfo.shopLogo}}" src="{{orderInfo.shopLogo}}" />
         <view class="shop-name omit single">{{orderInfo.shopName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
