--- a/pages/subpages/mine/order/subpages/meal-ticket-order/order-detail/index.wxss
+++ b/pages/subpages/mine/order/subpages/meal-ticket-order/order-detail/index.wxss
@@ -12,10 +12,37 @@
   margin-bottom: 24rpx;
   font-size: 28rpx;
 }
-.restaurant-name {
+
+.shop-logo {
+  margin-right: 16rpx;
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 50%;
+}
+.shop-name {
   flex: 1;
   color: #333;
   font-weight: 500;
+}
+
+.countdown-wrap {
+  padding-left: 16rpx;
+  padding-right: 8rpx;
+  height: 50rpx;
+  color: #666;
+  font-size: 22rpx;
+  background: #f5f6f8;
+  border-radius: 25rpx;
+}
+.alarm-icon {
+  margin-right: 6rpx;
+  width: 28rpx;
+  height: 28rpx;
+}
+.countdown {
+  margin-left: 6rpx;
+  width: 93rpx;
+  color: var(--blue-1);
 }
 
 .list {
