--- a/pages/subpages/mine/merchant/subpages/meal-ticket-order/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/meal-ticket-order/index.wxml
@@ -11,7 +11,10 @@
       class="menu-item {{curMenuIndex === index ? 'selected' : ''}} row center" 
       wx:for="{{menuList}}" wx:key="index" 
       bindtap="selectMenu" data-index="{{index}}"
-    >{{item.name}}</view>
+    >
+      <view>{{item.name}}</view>
+      <view class="total-spot" wx:if="{{item.total > 0}}" />
+    </view>
   </view>
 </view>
 
