feat: 餐券订单核销

--- a/pages/subpages/mine/components/meal-ticket-item/index.wxml
+++ b/pages/subpages/mine/components/meal-ticket-item/index.wxml
@@ -1,7 +1,7 @@
 <view class="ticket">
   <view class="main-info">
-    <view class="restaurant-name" wx:if="{{restaurantName}}">{{ restaurantName }}</view>
-    <view class="ticket-name">{{ticketInfo.price}}代{{ticketInfo.originalPrice}}元代金券</view>
+    <view class="restaurant-name">{{ ticketInfo.restaurantName }}</view>
+    <view class="ticket-name">{{ticketInfo.originalPrice}}元代金券</view>
     <view class="row between">
       <price-unit price="{{ticketInfo.price || 0}}" />
       <view class="count-wrap">
