--- a/pages/subpages/mine/order/components/meal-ticket-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/meal-ticket-order-item/index.wxml
@@ -18,7 +18,7 @@
     </view>
   </view>
   <view class="list-content">
-    <meal-ticket-item ticketInfo="{{item.ticketInfo}}" />
+    <meal-ticket-item ticketInfo="{{item.ticketInfo || null}}" />
   </view>
   <view class="list-footer">
     <view class="total-info row baseline">
